<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/relLayout1"
        android:layout_marginTop="@dimen/_50sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:src="@mipmap/ic_logo"
            android:id="@+id/logo"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            android:src="@mipmap/ic_logo_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/relLayout1"
        android:id="@+id/login_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:textSize="@dimen/_15sdp"
            android:inputType="text"
            android:hint="Username"
            android:textColor="@color/white"
            android:id="@+id/input_username"
            android:backgroundTint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:inputType="textPassword"
            android:hint="Password"
            android:textColor="@color/white"
            android:id="@+id/input_password"
            android:backgroundTint="@color/white"
            android:layout_below="@+id/input_username"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:id="@+id/buttonMain"
            android:textSize="20sp"
            android:text="@string/main_button"
            android:background="@color/button_red"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/input_password"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/relLayout2"
        android:layout_below="@id/login_layout"
        android:gravity="bottom"
        android:paddingBottom="@dimen/_10sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_bottomText1"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/main_bottomText2"
            android:textSize="@dimen/_10sdp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/main_bottomText3"
            android:textSize="@dimen/_10sdp"
            android:gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>