<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout1">

        <include layout="@layout/layout_top_transferamount"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relLayout1"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@id/relLayout2"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/grey"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/to"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/to"
            android:textColor="@color/button_red"
            android:text="Mr. Diondy Fernandez"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            android:id="@+id/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:textColor="@color/background"
            android:text="2287 0091 819"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:id="@+id/norek"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/norek"
            android:textColor="@color/background"
            android:text="CIMB Niaga"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout3"
        android:layout_below="@+id/relLayout2"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:id="@+id/transAmount"/>

        <EditText
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@id/transAmount"
            android:paddingLeft="@dimen/_45sdp"
            android:paddingRight="@dimen/_10sdp"
            android:hint="1.234.567"
            android:textSize="@dimen/_25sdp"
            android:gravity="center"
            android:inputType="numberPassword"
            android:id="@+id/text_amount"/>

        <TextView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="Rp. "
            android:layout_below="@+id/transAmount"
            android:textColor="@color/background"
            android:textSize="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_25sdp"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/ic_bottom_name"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLayout3"
        android:id="@+id/relLayout4">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/buttonTransfer"
            android:textSize="@dimen/_13sdp"
            android:text="@string/transfer"
            android:background="@color/button_red"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</RelativeLayout>