<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout1">

        <include layout="@layout/layout_top_transfer_success"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relLayout1"
        android:id="@+id/relLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/button_red"
            android:textSize="@dimen/_17sdp"
            android:text="@string/congrats"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:textStyle="bold"
            android:id="@+id/congrats"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:layout_below="@+id/congrats"
            android:text="@string/success"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/successText"/>

        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@mipmap/ic_success"
            android:layout_below="@+id/successText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_7sdp"
            android:id="@+id/checkmark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkmark"
            android:text="@string/transfered"
            android:textSize="@dimen/_15sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/background"
            android:id="@+id/transfered" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transfered"
            android:text="Mr. Diondy Fernandez"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:layout_marginTop="@dimen/_7sdp"
            android:id="@+id/transferName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transferName"
            android:text="2287 0091 819"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:id="@+id/rektrans"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rektrans"
            android:text="CIMB Niaga"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:id="@+id/banktrans"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/banktrans"
            android:text="Rp. 2.000.000"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/background"
            android:id="@+id/amount"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relLayout2"
        android:layout_marginTop="@dimen/_15sdp">

        <Button
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/button_red"
            android:text="Close"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:id="@+id/closeButton"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/ic_bottom_name"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>


</RelativeLayout>